# digital-cultural-consumption-analytics

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/processed/: analytics_dataset_generated.csv  data.xlsx  datamap_module_excerpt.csv  raw_module_inventory.csv
data/raw/: 2024-datamap.xlsx
scripts/: build_analytics_dataset.py
src/dashboard/: config.py  filters.py  main.py
src/dashboard/cli/: __init__.py  build_analytics_dataset.py
src/dashboard/sections/: audience.py  behavior.py  methodology.py  monetization.py  overview.py  raw_modules.py  segmentation.py  survey_explorer.py
src/dashboard/utils/: io.py  metrics.py  transforms.py  viz.py
src/digital_cultural_consumption_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_filters.py  test_metrics.py  test_routing.py  test_scripts_importable.py  test_transforms.py  test_viz.py
